--- a/AndroidMaqueta/app/src/main/res/layout/activity_listado.xml
+++ b/AndroidMaqueta/app/src/main/res/layout/activity_listado.xml
@@ -140,4 +140,30 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2"
         app:srcCompat="@drawable/logo_principal" />
 
+    <Button
+        android:id="@+id/boton1"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:elevation="0dp"
+        android:text="Button"
+        android:textColor="#00FFFFFF"
+        android:backgroundTint="#00FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/boton2"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#00FFFFFF"
+        android:text="Button"
+        android:textColor="#00FFFFFF"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
